Atualizar o manifest.json

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "AudioPhile - Web Player Moderno",
-  "short_name": "AudioPhile",
+  "name": "Spobrefy - Web Player Moderno",
+  "short_name": "Spobrefy",
   "description": "Seu player de música offline, moderno e pessoal.",
   "start_url": "/",
   "display": "standalone",
