Atualizar o manifest.json

--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Spobrefy - Web Player Moderno",
+  "name": "Spobrefy",
   "short_name": "Spobrefy",
   "description": "Seu player de música offline, moderno e pessoal.",
   "start_url": "/",
