--- a/manifest.json
+++ b/manifest.json
@@ -12,7 +12,7 @@
       "src": "icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png",
-      "purpose": "any"
+      "purpose": "any maskable"
     },
     {
       "src": "icon-512x512.png",
