Atualizar o musics-manifest.json

--- a/musics-manifest.json
+++ b/musics-manifest.json
@@ -46,5 +46,6 @@
     "Musics/Video Games(MP3_160K).mp3",
     "Musics/Disillusioned(MP3_160K).mp3",
     "Musics/Transform (feat. Charlotte Day Wilson)(MP3_160K).mp3",
-    "Musics/The Neighbourhood - W.D.Y.W.F.M_ (Official Audio)(MP3_160K).mp3"
+    "Musics/The Neighbourhood - W.D.Y.W.F.M_ (Official Audio)(MP3_160K).mp3",
+    "Musics/Unstoppable(MP3_160K).mp3"
 ]
